--- a/src/html/header.pug
+++ b/src/html/header.pug
@@ -1,5 +1,7 @@
 header.heder-section
-    .top-block-contact
-        a(href="https://gubinvs.ru") 
-            img(src="../img/supply-page/logogvs_1280.png", alt="Логотип")
-        a(href="tel:+79119215971").phone_top +7 (812) 921-59-71
+    .container
+        .top-block-contact
+            a(href="https://gubinvs.ru") 
+                img(src="../img/supply-page/logogvs_1280.png", alt="Логотип")
+            a(href="tel:+79119215971").phone_top +7 (812) 921-59-71
+        
