--- a/src/scss/heder.css
+++ b/src/scss/heder.css
@@ -20,3 +20,10 @@
   line-height: 41px;
   color: #8E0532;
 }
+
+@media only screen and (max-width: 768px) {
+  .top-block-contact {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+}
