--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1066,6 +1066,74 @@ select {
   color: #8E0532;
 }
 
+@media only screen and (max-width: 1280px) {
+  .supply-main-section__main-img {
+    background-image: url(../img/supply-page/main-img-section_1280.jpg);
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .supply-main-section__main-img {
+    height: 576px;
+    padding-top: 200px;
+    background-image: url(../img/supply-page/main-img-section_1024.jpg);
+  }
+}
+@media only screen and (max-width: 768px) {
+  .supply-main-section__main-img {
+    height: 432px;
+    padding-top: 120px;
+    background-image: url(../img/supply-page/main-img-section_768.jpg);
+  }
+  .supply-main-section__title {
+    font-size: 64px;
+    line-height: 81px;
+    margin-bottom: 28px;
+  }
+  .supply-main-section__discription {
+    width: 320px;
+    height: 30px;
+    font-size: 18px;
+    line-height: 20px;
+  }
+}
+@media only screen and (max-width: 468px) {
+  .supply-main-section__main-img {
+    height: 240px;
+    padding-top: 70px;
+    background-image: url(../img/supply-page/main-img-section_480.jpg);
+  }
+  .supply-main-section__title {
+    font-size: 56px;
+    line-height: 71px;
+    margin-bottom: 12px;
+  }
+  .supply-main-section__discription {
+    width: 300px;
+    height: 30px;
+    font-size: 18px;
+    line-height: 20px;
+  }
+}
+@media only screen and (max-width: 360px) {
+  .supply-main-section__main-img {
+    display: flex;
+    justify-content: flex-start;
+    height: 200px;
+    padding-top: 50px;
+    background-image: url(../img/supply-page/main-img-section_360.jpg);
+  }
+  .supply-main-section__title {
+    font-size: 48px;
+    line-height: 61px;
+    margin-bottom: 8px;
+  }
+  .supply-main-section__discription {
+    width: 300px;
+    height: 30px;
+    font-size: 16px;
+    line-height: 17px;
+  }
+}
 .supply-outsourcing-section {
   display: flex;
   justify-content: space-between;
