--- a/src/supply.pug
+++ b/src/supply.pug
@@ -13,11 +13,10 @@ block doctype
 
 //- Вставил блок с будующим контентом
 block content
-    include html/header.pug
+    //- include html/header.pug
     main
         h1(class="visually-hidden h1-visually", style="visibility: hidden;").h1__visually Аутсорсинг снабжения и закупочных процедур
-        
-        //- include html/supply-page/supply-main-section.pug 
+        include html/supply-page/supply-main-section.pug 
         //- include html/supply-page/supply-outsourcing-section.pug
         //- include html/supply-page/supply-task-section.pug
         //- include html/supply-page/supply-accounting-section.pug
