edit autsorsing blog adaptive

--- a/src/html/supply-page/supply-outsourcing-section.pug
+++ b/src/html/supply-page/supply-outsourcing-section.pug
@@ -1,4 +1,7 @@
 section.supply-outsourcing-section
+    .supply-title-block_mobile 
+        .supply-title-block__border_mobile 
+        h2.supply-title-block__text_mobile Аутсорсинг задач снабжения
     .container.supply-outsourcing-container
         .block-content
             .supply-title-block 
@@ -12,10 +15,8 @@ section.supply-outsourcing-section
                 .outsourcing-discr__item Позволяет экономить на специализированных программах учета и системах аналитики.
             .supply-outsourcing__discr Компания получает отлаженный, прозрачный процесс закупок, оптимизированную транспортную и 
                 | складскую логистику, проверенную систему учета и аналитики.
-    .supply-img-block
-        .img-block
-            .fon-block
-            .min-img-block
-
-
+        .supply-img-block
+            .img-block
+                .fon-block
+                .min-img-block
 
