--- a/src/scss/supply-page/supply-outsourcing-section.css
+++ b/src/scss/supply-page/supply-outsourcing-section.css
@@ -116,6 +116,14 @@
     left: 55px;
   }
 }
+@media only screen and (max-width: 670px) {
+  .supply-img-block {
+    display: none;
+  }
+  .block-content {
+    width: 100%;
+  }
+}
 @media only screen and (max-width: 480px) {
   .supply-outsourcing-container {
     flex-direction: column;
@@ -123,5 +131,8 @@
   }
   .supply-img-block {
     display: none;
+  }
+  .supply-outsourcing-section {
+    margin-bottom: 20px;
   }
 }
