--- a/Compiled/css/style.css
+++ b/Compiled/css/style.css
@@ -1255,6 +1255,15 @@ select {
     left: 55px;
   }
 }
+@media only screen and (max-width: 670px) {
+  .supply-img-block {
+    display: none;
+  }
+
+  .block-content {
+    width: 100%;
+  }
+}
 @media only screen and (max-width: 480px) {
   .supply-outsourcing-container {
     flex-direction: column;
@@ -1263,6 +1272,10 @@ select {
 
   .supply-img-block {
     display: none;
+  }
+
+  .supply-outsourcing-section {
+    margin-bottom: 20px;
   }
 }
 .supply-blocktop-img {
@@ -1304,6 +1317,49 @@ select {
   margin-bottom: 12px;
 }
 
+@media only screen and (max-width: 1024px) {
+  .supply-task-section {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  .supply-title-block_task {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .supply-title-block_task,
+.supply-title-block__border_task,
+.supply-title-block__text_task {
+    display: inherit !important;
+  }
+
+  .supply-blocktop-img__mini-img {
+    display: none;
+  }
+
+  .background-block {
+    width: 100%;
+    height: 100%;
+    padding: 50px 20px 50px 20px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .supply-blocktop-img__mini-img,
+.supply-blocktop-img__big-img {
+    display: none;
+  }
+
+  .supply-title-block__text_task {
+    font-size: 28px !important;
+    line-height: 36px !important;
+  }
+
+  .background-block__content {
+    font-size: 17px;
+    line-height: 20px;
+  }
+}
 .supply-accounting-section {
   display: flex;
   justify-content: flex-start;
