--- a/src/scss/supply-page/supply-task-section.css
+++ b/src/scss/supply-page/supply-task-section.css
@@ -36,3 +36,42 @@
 .background-block__content:not(:last-of-type) {
   margin-bottom: 12px;
 }
+
+@media only screen and (max-width: 1024px) {
+  .supply-task-section {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  .supply-title-block_task {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .supply-title-block_task,
+  .supply-title-block__border_task,
+  .supply-title-block__text_task {
+    display: inherit !important;
+  }
+  .supply-blocktop-img__mini-img {
+    display: none;
+  }
+  .background-block {
+    width: 100%;
+    height: 100%;
+    padding: 50px 20px 50px 20px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .supply-blocktop-img__mini-img,
+  .supply-blocktop-img__big-img {
+    display: none;
+  }
+  .supply-title-block__text_task {
+    font-size: 28px !important;
+    line-height: 36px !important;
+  }
+  .background-block__content {
+    font-size: 17px;
+    line-height: 20px;
+  }
+}
