edit 1280 block content

--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1291,6 +1291,13 @@ select {
   margin-bottom: 12px;
 }
 
+@media only screen and (max-width: 1280px) {
+  .background-block {
+    width: 100%;
+    height: 100%;
+    padding: 50px 20px 50px 20px;
+  }
+}
 @media only screen and (max-width: 1024px) {
   .supply-task-section {
     flex-direction: column;
@@ -1298,6 +1305,11 @@ select {
   }
   .supply-title-block_task {
     width: 100%;
+  }
+  .background-block {
+    width: 100%;
+    height: 100%;
+    padding: 50px 20px 50px 20px;
   }
 }
 @media only screen and (max-width: 768px) {
@@ -1308,11 +1320,6 @@ select {
   }
   .supply-blocktop-img__mini-img {
     display: none;
-  }
-  .background-block {
-    width: 100%;
-    height: 100%;
-    padding: 50px 20px 50px 20px;
   }
 }
 @media only screen and (max-width: 480px) {
