--- a/src/scss/supply-page/supply-task-section.css
+++ b/src/scss/supply-page/supply-task-section.css
@@ -37,6 +37,13 @@
   margin-bottom: 12px;
 }
 
+@media only screen and (max-width: 1280px) {
+  .background-block {
+    width: 100%;
+    height: 100%;
+    padding: 50px 20px 50px 20px;
+  }
+}
 @media only screen and (max-width: 1024px) {
   .supply-task-section {
     flex-direction: column;
@@ -44,6 +51,11 @@
   }
   .supply-title-block_task {
     width: 100%;
+  }
+  .background-block {
+    width: 100%;
+    height: 100%;
+    padding: 50px 20px 50px 20px;
   }
 }
 @media only screen and (max-width: 768px) {
@@ -54,11 +66,6 @@
   }
   .supply-blocktop-img__mini-img {
     display: none;
-  }
-  .background-block {
-    width: 100%;
-    height: 100%;
-    padding: 50px 20px 50px 20px;
   }
 }
 @media only screen and (max-width: 480px) {
