--- a/src/html/supply-page/supply-accounting-section.pug
+++ b/src/html/supply-page/supply-accounting-section.pug
@@ -1,12 +1,14 @@
 section.supply-accounting-section
-    .container
+    .container.supply-accounting-section__container
         .supply-accounting-section__block-img 
             .sas-block-img__border
-            img(src="../img/supply-page/iMac.png", alt="Компьютер с программой 1с на мониторе").sas-block-img__img
+            picture
+                source(srcset="../img/supply-page/iMac_1280.png" media="(max-width: 1280px)")
+                img(src="../img/supply-page/iMac.png", alt="Компьютер с программой 1с на мониторе").sas-block-img__img
         .supply-accounting-section__block-content
-            .supply-title-block.supply-title-block__accounting-section
-                .supply-title-block__border.supply-accounting-section__title-border
-                h2.supply-title-block__text.supply-title-block__text_accounting-section Мы ведем учет <br> в 1С УНФ
+            .supply-title-block.supply-title-block__accounting-section.put-none
+                .supply-title-block__border.supply-accounting-section__title-border.put-none
+                h2.supply-title-block__text.supply-title-block__text_accounting-section.put-none Мы ведем учет <br> в 1С УНФ
             .block-content
                     .supply-outsourcing__discr Все операции закупочных процедур, такие как:
                     .supply-outsourcing__discr.outsourcing-discr__list
