--- a/src/scss/supply-page-style.scss
+++ b/src/scss/supply-page-style.scss
@@ -73,6 +73,10 @@
         display: none;
     }
 
+    .put-none {
+        display: inherit !important;
+    }
+
     .supply-title-block_mobile {
         display: inherit;
         display: flex;
