--- a/src/lean.pug
+++ b/src/lean.pug
@@ -9,6 +9,8 @@ block doctype
     - var titleName = 'Внедрение идеологии бережливого производства, систематизации и стандартизации бизнес-процессов, политика в области охраны труда';
     //- Массив с путями к файлам со стилями
     - var stylePath = [];
+    //-- указывает поисковому роботу адрес главной страницы среди группы страниц дублей
+    - var canonical = '';
 
 
 //- Вставил блок с будующим контентом
