--- a/src/messageok.pug
+++ b/src/messageok.pug
@@ -9,6 +9,8 @@ block doctype
     - var titleName = 'Ваше сообщение удачно отправлено';
     //- Массив с путями к файлам со стилями
     - var stylePath = [];
+    //-- указывает поисковому роботу адрес главной страницы среди группы страниц дублей
+    - var canonical = '';
 
 
 //- Вставил блок с будующим контентом
