--- a/src/scss/supply-page/supply-request-section.scss
+++ b/src/scss/supply-page/supply-request-section.scss
@@ -57,3 +57,21 @@
 .request-section__fon-block {
     height: 605px;
 }
+
+@media only screen and (max-width: 1024px) {
+    .supply-request-section {
+        flex-direction: column;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+ 
+}
+
+@media only screen and (max-width: 480px) {
+
+}
+
+@media only screen and (max-width: 360px) {
+
+}
