--- a/src/scss/supply-page/supply-request-section.css
+++ b/src/scss/supply-page/supply-request-section.css
@@ -54,3 +54,22 @@
 .request-section__fon-block {
   height: 605px;
 }
+
+@media only screen and (max-width: 1024px) {
+  .form-block {
+    margin-right: 20px;
+  }
+  .form-block__title {
+    font-size: 44px;
+    line-height: 56px;
+  }
+  .fon-block {
+    left: 110px;
+  }
+  .request-section__fon-block {
+    width: 152px;
+  }
+  .request-section__img-block {
+    width: 372px;
+  }
+}
