--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1604,6 +1604,24 @@ select {
 }
 
 @media only screen and (max-width: 1024px) {
+  .form-block {
+    margin-right: 20px;
+  }
+  .form-block__title {
+    font-size: 44px;
+    line-height: 56px;
+  }
+  .fon-block {
+    left: 110px;
+  }
+  .request-section__fon-block {
+    width: 152px;
+  }
+  .request-section__img-block {
+    width: 372px;
+  }
+}
+@media only screen and (max-width: 1024px) {
   .supply-title-block {
     flex-direction: column;
     margin-bottom: 40px;
