--- a/src/scss/supply-page-style.css
+++ b/src/scss/supply-page-style.css
@@ -576,7 +576,7 @@
 .supply-request-section {
   display: flex;
   justify-content: center;
-  margin-bottom: 100px;
+  padding-bottom: 100px;
 }
 
 .form-block {
@@ -615,39 +615,14 @@
   color: #FFFFFF;
 }
 
-.request-section__img-block {
-  width: 440px;
+.form-block {
+  width: 491px;
 }
 
 .request-section__img-block {
-  height: 540px;
-  background-image: url(../img/supply-page/request-section__img.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
+  width: 410px;
 }
 
-.request-section__fon-block {
-  height: 605px;
-}
-
-@media only screen and (max-width: 1024px) {
-  .form-block {
-    margin-right: 20px;
-  }
-  .form-block__title {
-    font-size: 44px;
-    line-height: 56px;
-  }
-  .fon-block {
-    left: 110px;
-  }
-  .request-section__fon-block {
-    width: 152px;
-  }
-  .request-section__img-block {
-    width: 372px;
-  }
-}
 @media only screen and (max-width: 1024px) {
   .supply-title-block {
     flex-direction: column;
