--- a/src/supply.pug
+++ b/src/supply.pug
@@ -24,6 +24,6 @@ block content
         //-- include html/supply-page/supply-accounting-section.pug
         include html/supply-page/supply-questions-section.pug 
         include html/supply-page/supply-request-section.pug 
-        include html/footer.pug 
+        //-- include html/footer.pug 
         script(src="js/app.js")
 
