--- a/Compiled/css/style.css
+++ b/Compiled/css/style.css
@@ -1523,7 +1523,7 @@ select {
     align-items: flex-start;
     position: absolute;
     top: 10px;
-    left: 0px;
+    left: 5vw;
     transform: rotate(0deg);
   }
 
@@ -1542,21 +1542,18 @@ select {
 }
 @media only screen and (max-width: 680px) {
   .supply-question-section__content-block {
+    width: 100%;
     padding-left: 20px;
   }
 
   .question-list__item_number {
-    width: 40px;
-    height: 40px;
-    font-size: 26px;
-    line-height: 36px;
-    background-color: #8E0532;
+    display: none;
   }
 
   .question-list__item_question {
-    width: 390px;
+    width: 100%;
     height: 40px;
-    padding-left: 22px;
+    padding-left: 20px;
     font-size: 17px;
     line-height: 21px;
   }
@@ -1566,17 +1563,13 @@ select {
   }
 
   .question-list__item_answer {
-    width: 350px;
-    padding-left: 80px;
+    width: 100%;
+    padding: 0px 20px 20px 20px;
     font-size: 17px;
     margin-bottom: 20px;
   }
 }
 @media only screen and (max-width: 360px) {
-  .question-list__item_number {
-    display: none;
-  }
-
   .question-list__item_question {
     width: 320px;
     height: 40px;
