--- a/src/scss/supply-page/supply-questions-section.css
+++ b/src/scss/supply-page/supply-questions-section.css
@@ -74,7 +74,7 @@
     align-items: flex-start;
     position: absolute;
     top: 10px;
-    left: 0px;
+    left: 5vw;
     transform: rotate(0deg);
   }
   .supply-question-section__content-block {
@@ -92,19 +92,16 @@
 }
 @media only screen and (max-width: 680px) {
   .supply-question-section__content-block {
+    width: 100%;
     padding-left: 20px;
   }
   .question-list__item_number {
-    width: 40px;
-    height: 40px;
-    font-size: 26px;
-    line-height: 36px;
-    background-color: #8E0532;
+    display: none;
   }
   .question-list__item_question {
-    width: 390px;
+    width: 100%;
     height: 40px;
-    padding-left: 22px;
+    padding-left: 20px;
     font-size: 17px;
     line-height: 21px;
   }
@@ -112,16 +109,13 @@
     background-position: right 5px bottom 0px;
   }
   .question-list__item_answer {
-    width: 350px;
-    padding-left: 80px;
+    width: 100%;
+    padding: 0px 20px 20px 20px;
     font-size: 17px;
     margin-bottom: 20px;
   }
 }
 @media only screen and (max-width: 360px) {
-  .question-list__item_number {
-    display: none;
-  }
   .question-list__item_question {
     width: 320px;
     height: 40px;
