--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -10,7 +10,6 @@
     display: flex;
     justify-content: space-between;
     padding: 60px 0px 60px 0px;
-
 }
 
 .footer-section__left-block {
@@ -99,4 +98,24 @@
     font-weight: 400;
     font-size: 18px;
     color: $textContactblokColor;
+}
+
+@media only screen and (max-width: 1024px) {
+    .footer-section__left-block {
+        margin-right: 20px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .supply-footer__continer {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 60px 0px 60px 40px;
+    }
+
+    .footer-section__left-block {
+        margin-right: 0px;
+        margin-bottom: 20px;
+    }
 }
