--- a/src/html/footer.pug
+++ b/src/html/footer.pug
@@ -10,16 +10,15 @@ footer.supply-footer
         .footer-section__right-block 
             .footer-contact-list 
                 .footer-contact__title Контакты:
-                .footer-contact__item Тел: +7 (812) 921-59-71 СПб
-                .footer-contact__item Тел: +7 (342) 204-00-43 Пермь
+                .footer-contact__item Тел: +7 (812) 921-59-71
                 .social-block-list
                     a(href="https://t.me/gubinvs").social-block-list__icon
                         img(src="../../img/supply-page/icons_telegram.svg", alt="Иконка телеграмм")
-                    a(href="https://vk.com/gubinvs").social-block-list__icon 
+                    a(href="https://vk.com/club220708521").social-block-list__icon 
                         img(src="../../img/supply-page/icons_vkontakte.svg", alt="Иконка вконтакте")
                     a(href="mailto:gubinvs@gmail.com").social-block-list__icon 
                         img(src="../../img/supply-page/icons_mail.svg", alt="Иконка электронной почты")
-                    a(href="https://www.instagram.com/gubinvs/").social-block-list__icon 
-                        img(src="../../img/supply-page/icons_instagram.svg", alt="Иконка инстаграмм")
+                    //- a(href="https://www.instagram.com/gubinvs/").social-block-list__icon 
+                    //-     img(src="../../img/supply-page/icons_instagram.svg", alt="Иконка инстаграмм")
                 a(href="https://gubinvs.ru/pp-page.html") 
                     .pp-page Политика в отношении<br> обработки персональных данных
