--- a/src/supply.pug
+++ b/src/supply.pug
@@ -18,12 +18,12 @@ block content
     //-- include html/header.pug
     main
         h1(class="visually-hidden h1-visually", style="visibility: hidden;").h1__visually Аутсорсинг снабжения и закупочных процедур
-        include html/supply-page/supply-main-section.pug 
-        include html/supply-page/supply-outsourcing-section.pug
-        include html/supply-page/supply-task-section.pug
-        include html/supply-page/supply-accounting-section.pug
-        include html/supply-page/supply-questions-section.pug 
-        include html/supply-page/supply-request-section.pug 
-        //-- include html/footer.pug 
-        script(src="js/app.js")
+        //- include html/supply-page/supply-main-section.pug 
+        //- include html/supply-page/supply-outsourcing-section.pug
+        //- include html/supply-page/supply-task-section.pug
+        //- include html/supply-page/supply-accounting-section.pug
+        //- include html/supply-page/supply-questions-section.pug 
+        //- include html/supply-page/supply-request-section.pug 
+    include html/footer.pug 
+    script(src="js/app.js")
 
