crate new header

--- a/src/html/header.pug
+++ b/src/html/header.pug
@@ -1,7 +1,14 @@
 header.heder-section
-    .container
-        .top-block-contact
-            a(href="https://gubinvs.ru") 
-                img(src="../img/supply-page/logogvs_1280.png", alt="Логотип")
-            a(href="tel:+79119215971").phone_top +7 (812) 921-59-71
-        
+    .container.heder-section__container
+        a(href="https://gubinvs.ru").logo-block
+            img(src="../img/supply-page/logogvs_1280.png", alt="Логотип").logo-img
+            .logo-border
+            .logo-title Менеджмент
+        nav.nav-header-list 
+            .nav-header-list__item СМК
+            .nav-header-list__item СУОТ
+            .nav-header-list__item СУСиЗ
+        .burger-room-block
+            .burger
+                span
+            .room-butom Личный кабинет
