--- a/src/scss/heder.css
+++ b/src/scss/heder.css
@@ -1,29 +1,129 @@
-.heder-section {
-  max-width: 1280px;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.top-block-contact {
+.heder-section__container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  max-width: 1280px;
+  margin-right: auto;
+  margin-left: auto;
   padding-top: 8px;
   margin-bottom: 8px;
 }
 
-.phone_top {
-  font-family: "Days One", "Roboto Condensed", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 32px;
-  line-height: 41px;
-  color: #8E0532;
+.logo-block {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
-@media only screen and (max-width: 768px) {
-  .top-block-contact {
-    flex-direction: column;
-    align-items: flex-end;
-  }
+.logo-img {
+  margin-right: 12px;
+}
+
+.logo-border {
+  width: 2px;
+  height: 40px;
+  background-color: #000000;
+  margin-right: 12px;
+}
+
+.nav-header-list {
+  display: flex;
+}
+
+.nav-header-list__item {
+  font-size: 22px;
+  line-height: 25px;
+  font-weight: 400;
+  color: #000000;
+}
+
+.nav-header-list__item:not(:last-of-type) {
+  margin-right: 22px;
+}
+
+.burger-room-block {
+  display: flex;
+  align-items: center;
+}
+
+.room-butom {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-right: 4px;
+  width: 150px;
+  height: 50px;
+  font-size: 14px;
+  background-image: url(../img/buton-room-icon.png);
+  background-repeat: no-repeat;
+  background-position: 8px center;
+  background-color: #8E0532;
+  color: #FFFFFF;
+}
+
+.burger {
+  position: relative;
+  display: block;
+  width: 40px;
+  height: 30px;
+  margin-right: 12px;
+  cursor: pointer;
+}
+
+.burger::before,
+.burger::after {
+  content: " ";
+  position: absolute;
+  width: 40px;
+  height: 4px;
+  left: 0;
+  background-color: #000000;
+}
+
+.burger span {
+  position: absolute;
+  top: 13px;
+  width: 40px;
+  height: 4px;
+  left: 0;
+  background-color: #000000;
+}
+
+.burger_close span {
+  display: none;
+}
+
+.burger::before {
+  top: 0px;
+}
+
+.burger::after {
+  bottom: 0px;
+}
+
+.burger_close {
+  position: relative;
+  display: none;
+  width: 40px;
+  height: 30px;
+}
+
+.burger_close::before,
+.burger_close::after {
+  content: " ";
+  position: absolute;
+  width: 40px;
+  height: 4px;
+  left: 0;
+  background-color: #000000;
+}
+
+.burger_close::before {
+  top: 13px;
+  transform: rotate(-45deg);
+}
+
+.burger_close::after {
+  bottom: 13px;
+  transform: rotate(45deg);
 }
