--- a/src/scss/lean-page-style.css
+++ b/src/scss/lean-page-style.css
@@ -5,6 +5,12 @@
   margin-left: auto;
 }
 
+.logo-border {
+  width: 1px;
+  height: 40px;
+  background-color: #000000;
+}
+
 .top-block-contact {
   display: flex;
   justify-content: space-between;
@@ -786,10 +792,26 @@ select {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    width: 100%;
     padding: 60px 0px 60px 40px;
   }
   .footer-section__left-block {
+    width: 100%;
     margin-right: 0px;
     margin-bottom: 20px;
+  }
+  .form-tel-footer {
+    width: 100%;
+  }
+  .form-tel-footer__input {
+    width: 290px;
+  }
+  .form-tel-text {
+    font-size: 22px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .form-tel-footer__input {
+    width: 190px;
   }
 }
