--- a/src/html/header.pug
+++ b/src/html/header.pug
@@ -1,5 +1,5 @@
-header.heder-section
-    .container.heder-section__container
+header.header-section
+    .container.header-section__container
         a(href="https://gubinvs.ru").logo-block
             img(src="../img/supply-page/logogvs_1280.png", alt="Логотип").logo-img
             .logo-border
@@ -12,3 +12,8 @@ header.heder-section
             .burger
                 span
             .room-butom Личный кабинет
+    .container
+        .nav-block-active 
+            .nav-header-list__item Система менеджмента качества
+            .nav-header-list__item Система управления охраной труда
+            .nav-header-list__item Система управления снабжением и закупками
