--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -111,17 +111,10 @@ button {
     }
 }
 
+@import 'header.scss';
 @import 'lean-page-style.scss';
 @import 'supply-page-style.scss';
 @import 'messageok.scss';
-
-
-
-
-
-
-
-
 
 
 
