--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -131,4 +131,8 @@
     bottom: 13px;
     transform: rotate(45deg);
 }
-  
+
+.nav-block-active {
+    width: 500px;
+    border: 1px solid $borderColorMax;
+}
