--- a/Compiled/css/style.css
+++ b/Compiled/css/style.css
@@ -324,9 +324,29 @@ button {
   transform: rotate(45deg);
 }
 
+.nav-header-list__active {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 162px;
+}
+
 .nav-block-active {
-  width: 500px;
+  display: none;
+  width: 610px;
+  padding: 20px 50px 20px 50px;
   border: 1px solid #8E0532;
+}
+
+.nav-header-list__item_active:not(:last-of-type) {
+  margin-bottom: 4px;
+}
+
+.none-block {
+  display: none;
+}
+
+.active-block {
+  display: inherit;
 }
 
 .index-main-section {
