--- a/src/html/header.pug
+++ b/src/html/header.pug
@@ -12,8 +12,8 @@ header.header-section
             .burger
                 span
             .room-butom Личный кабинет
-    .container
-        .nav-block-active 
-            .nav-header-list__item Система менеджмента качества
-            .nav-header-list__item Система управления охраной труда
-            .nav-header-list__item Система управления снабжением и закупками
+    .container.nav-header-list__active
+        .nav-block-active
+            .nav-header-list__item.nav-header-list__item_active Система менеджмента качества
+            .nav-header-list__item.nav-header-list__item_active Система управления охраной труда
+            .nav-header-list__item.nav-header-list__item_active Система управления снабжением и закупками
