--- a/src/html/header.pug
+++ b/src/html/header.pug
@@ -13,7 +13,7 @@ header.header-section
                 span
             .room-butom Личный кабинет
     .container.nav-header-list__active
-        .nav-block-active
+        .nav-block-active.none-block
             .nav-header-list__item.nav-header-list__item_active Система менеджмента качества
             .nav-header-list__item.nav-header-list__item_active Система управления охраной труда
             .nav-header-list__item.nav-header-list__item_active Система управления снабжением и закупками
