--- a/src/html/header.pug
+++ b/src/html/header.pug
@@ -9,7 +9,9 @@ header.header-section
             .nav-header-list__item СУОТ
             .nav-header-list__item СУСиЗ
         .burger-room-block
-            .burger
+            div(id="burger").burger
+                span
+            .burger_close
                 span
             .room-butom Личный кабинет
     .container.nav-header-list__active
