--- a/src/labor.pug
+++ b/src/labor.pug
@@ -16,3 +16,6 @@ block doctype
 //- Вставил блок с будующим контентом
 block content
     include html/header.pug
+
+
+    script(src="js/modules/burger-action.js")
