--- a/src/scss/header.css
+++ b/src/scss/header.css
@@ -89,10 +89,6 @@
   background-color: #000000;
 }
 
-.burger_close span {
-  display: none;
-}
-
 .burger::before {
   top: 0px;
 }
@@ -103,9 +99,9 @@
 
 .burger_close {
   position: relative;
-  display: none;
   width: 40px;
   height: 30px;
+  margin-right: 12px;
 }
 
 .burger_close::before,
