--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -93,9 +93,9 @@
     background-color: $textColor;
 }
 
-.burger_close span {
-    display: none;
-}
+// .burger_close span {
+//     display: none;
+// }
 
 .burger::before {
     top: 0px;
@@ -107,10 +107,12 @@
 
 .burger_close {
     position: relative;
-    display: none;
+    // display: none;
     width: 40px;
     height: 30px;
+    margin-right: 12px;
 }
+
 
 .burger_close::before,
 .burger_close::after {
