create burger js

--- a/src/html/header.pug
+++ b/src/html/header.pug
@@ -11,7 +11,7 @@ header.header-section
         .burger-room-block
             div(id="burger").burger
                 span
-            .burger_close
+            .burger_close.none-block
                 span
             .room-butom Личный кабинет
     .container.nav-header-list__active
