--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -45,6 +45,10 @@
     margin-right: 22px;
 }
 
+.nav-header-list__item:hover {
+    color: $borderColorMax;
+}
+
 .burger-room-block {
     display: flex;
     align-items: center;
@@ -93,10 +97,6 @@
     background-color: $textColor;
 }
 
-// .burger_close span {
-//     display: none;
-// }
-
 .burger::before {
     top: 0px;
 }
@@ -107,7 +107,6 @@
 
 .burger_close {
     position: relative;
-    // display: none;
     width: 40px;
     height: 30px;
     margin-right: 12px;
@@ -134,21 +133,18 @@
     transform: rotate(45deg);
 }
 
-
 .nav-header-list__active {
     display: flex;
     justify-content: flex-end;
     padding-right: 162px;
+    margin-bottom: 50px;
 }
 
 .nav-block-active {
+    display: inline-block;
     width: 610px;
     padding: 20px 50px 20px 50px;
     border: 1px solid $borderColorMax;
-}
-
-.nav-header-list__item_active:not(:last-of-type) {
-    margin-bottom: 4px;
 }
 
 .none-block {
