--- a/src/html/header.pug
+++ b/src/html/header.pug
@@ -5,9 +5,9 @@ header.header-section
             .logo-border
             .logo-title Менеджмент
         nav.nav-header-list 
-            .nav-header-list__item СМК
-            .nav-header-list__item СУОТ
-            .nav-header-list__item СУСиЗ
+            a(href="lean.html").nav-header-list__item СМК
+            a(href="labor.html").nav-header-list__item СУОТ
+            a(href="supply.html").nav-header-list__item СУСиЗ
         .burger-room-block
             div(id="burger").burger
                 span
@@ -16,6 +16,9 @@ header.header-section
             .room-butom Личный кабинет
     .container.nav-header-list__active
         .nav-block-active.none-block
-            .nav-header-list__item.nav-header-list__item_active Система менеджмента качества
-            .nav-header-list__item.nav-header-list__item_active Система управления охраной труда
-            .nav-header-list__item.nav-header-list__item_active Система управления снабжением и закупками
+            a(href="lean.html").nav-header-list__item_active
+                .nav-header-list__item Система менеджмента качества
+            a(href="labor.html").nav-header-list__item_active
+                .nav-header-list__item Система управления охраной труда
+            a(href="supply.html").nav-header-list__item_active
+                .nav-header-list__item Система управления снабжением и закупками
