--- a/src/html/header.pug
+++ b/src/html/header.pug
@@ -1,7 +1,7 @@
 header.header-section
     .container.header-section__container
         a(href="https://gubinvs.ru").logo-block
-            img(src="../img/supply-page/logogvs_1280.png", alt="Логотип").logo-img
+            img(src="../img/nav-logo__img.png", alt="Логотип").logo-img
             .logo-border
             .logo-title Менеджмент
         nav.nav-header-list 
