--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -231,6 +231,10 @@ button {
   line-height: 25px;
   font-weight: 400;
   color: #000000;
+  padding-left: 28px;
+  background-image: url(../img/index-page/tb-list-item__check-img_480.png);
+  background-repeat: no-repeat;
+  background-position: left;
 }
 
 .nav-header-list__item:not(:last-of-type) {
@@ -333,15 +337,36 @@ button {
 
 .nav-block-active {
   display: inline-block;
-  width: 610px;
+  width: 650px;
   padding: 20px 50px 20px 50px;
   border: 1px solid #8E0532;
+}
+
+.nav-header-list__item_active {
+  display: block;
+  margin-bottom: 8px;
 }
 
 .none-block {
   display: none;
 }
 
+@media only screen and (max-width: 1024px) {
+  .nav-header-list {
+    display: none;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .room-butom {
+    display: none;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .logo-border,
+  .logo-title {
+    display: none;
+  }
+}
 .index-main-section {
   display: flex;
   justify-content: space-between;
