--- a/src/labor.pug
+++ b/src/labor.pug
@@ -16,6 +16,7 @@ block doctype
 //- Вставил блок с будующим контентом
 block content
     include html/header.pug
-
-
+    main 
+        include html/labor-page/labor-main-section.pug 
+        
     script(src="js/modules/burger-action.js")
