--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,11 @@
     font-display: swap;
 }
 
+
+
+
+
+
 //-- сброс стилей
 @import 'variables/normalize.scss';
 
@@ -116,9 +121,8 @@ button {
 @import 'header.scss';
 @import 'lean-page-style.scss';
 @import 'supply-page-style.scss';
+@import 'labor-page-style.scss';
 @import 'messageok.scss';
-
-
 
 
 
