--- a/src/scss/variables/variables.scss
+++ b/src/scss/variables/variables.scss
@@ -1,6 +1,7 @@
 //-- Шрифты
 // $ff-title: 'Roboto Condensed', sans-serif;
 $ffTitle: 'Days One', 'Roboto Condensed', sans-serif;
+$ffWindowsPhone: 'Roboto Condensed', sans-serif;
 $ffTextBady: 'Mulish', sans-serif;
 
 
