--- a/Compiled/css/style.css
+++ b/Compiled/css/style.css
@@ -1921,6 +1921,108 @@ select {
     line-height: 36px;
   }
 }
+.labor-main-section__container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.lms-left-block {
+  display: flex;
+  align-items: center;
+  padding-left: 87px;
+}
+
+.lms-title-block__title {
+  font-family: "Days One", "Roboto Condensed", sans-serif;
+  font-size: 24px;
+  line-height: 31px;
+  font-weight: 400;
+  color: #000000;
+}
+
+.lms-title-block__discription {
+  width: 343px;
+  font-size: 16px;
+  line-height: 2opx;
+  font-weight: 300;
+  margin-bottom: 48px;
+}
+
+.lms-title-block__button {
+  width: 235px;
+  height: 40px;
+  background-color: #8E0532;
+  color: #FFFFFF;
+}
+
+.lms-right-block {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 575px;
+  height: 350px;
+  flex-shrink: 0;
+  background-color: #8E0532;
+  padding-left: 28px;
+}
+
+.lms-right-block__img {
+  position: absolute;
+  bottom: -70px;
+  right: -90px;
+}
+
+.windows-phone-block {
+  margin-bottom: 84px;
+}
+
+.windows-phone-block__code-sity {
+  color: #FFFFFF;
+  font-size: 20px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 400;
+}
+
+.windows-phone-block__numder-list {
+  display: flex;
+}
+
+.windows-phone-block__number-item {
+  width: 30px;
+  height: 60px;
+  border-radius: 4px;
+  background-color: #FFFFFF;
+  color: #8E0532;
+  font-size: 40px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 700;
+  text-align: center;
+}
+
+.windows-phone-block__number-item:not(:last-of-type) {
+  margin-right: 4px;
+}
+
+.windows-phone-block__number-item:nth-child(3),
+.windows-phone-block__number-item:nth-child(5) {
+  margin-right: 8px;
+}
+
+.slogan-block__line {
+  font-size: 20px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 500;
+}
+
+.first-line {
+  color: #DE84A2;
+}
+
+.second-line {
+  color: #FFFFFF;
+}
+
 .messageok-section {
   display: flex;
   flex-direction: column;
