--- a/src/scss/labor-page/labor-main-section.css
+++ b/src/scss/labor-page/labor-main-section.css
@@ -99,3 +99,9 @@
 .second-line {
   color: #FFFFFF;
 }
+
+@media only screen and (max-width: 1280px) {
+  .lms-left-block {
+    padding-left: 0px;
+  }
+}
