--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1968,6 +1968,11 @@ select {
   color: #FFFFFF;
 }
 
+@media only screen and (max-width: 1280px) {
+  .lms-left-block {
+    padding-left: 0px;
+  }
+}
 .messageok-section {
   display: flex;
   flex-direction: column;
